update the multiple trigger names

--- a/.github/workflows/02.workflow-event.yml
+++ b/.github/workflows/02.workflow-event.yml
@@ -1,5 +1,12 @@
 name: 02 - workflow Event
-on : push
+
+on: 
+    push:
+    pull_request:
+    workflow_dispatch:
+    schedule: 
+      - cron: '0 0  * * *'
+
 jobs: 
     echo: 
         runs-on: ubuntu-latest
