add new commands for ubuntu runner

--- a/.github/workflows/03.workflow-runner.yml
+++ b/.github/workflows/03.workflow-runner.yml
@@ -10,3 +10,5 @@ jobs:
               run: | 
                 echo "print ubuntu runner os name"
                 echo "Runner OS: $RUNNER_OS"
+                df -h 
+                free -m 
