update mac os name

--- a/.github/workflows/03.workflow-runner.yml
+++ b/.github/workflows/03.workflow-runner.yml
@@ -25,7 +25,7 @@ jobs:
                 df -h 
 
     mac-echo: 
-        runs-on: mac-latest
+        runs-on: macos-latest
         steps: 
             - name: mac runner os 
               run: | 
